AI atualizada sem conexao com o site